Added OTP verification for users